Closed Bug 1599864 Opened 5 years ago Closed 4 years ago

when title has html tag doesn't shown on taskbar

Categories

(Firefox :: General, defect, P1)

72 Branch
defect

Tracking

()

RESOLVED FIXED
Firefox 73
Tracking Status
firefox-esr68 --- unaffected
firefox70 --- unaffected
firefox71 --- unaffected
firefox72 + fixed
firefox73 --- fixed

People

(Reporter: ramazan.aktolu, Assigned: stas)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:72.0) Gecko/20100101 Firefox/72.0

Steps to reproduce:

https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input/number

In link above, title contains HTML tag.
Title is not shown correct on the taskbar when contains HTML tag.

Expected results:

title on taskbar should show html taks in like title bar.

Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Component: Untriaged → General
Ever confirmed: true
Flags: needinfo?(gandalf)
Keywords: regression
Regressed by: 1591328
Assignee: nobody → gandalf

[Tracking Requested - why for this release]:
Broken primary UI on some pages.

(We should make sure this makes it to beta.)

Priority: -- → P1
Attachment #9113105 - Attachment is obsolete: true
Flags: needinfo?(gandalf)
Pushed by cbrindusan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c21f94d31eb5
Ignore markup when localizing <title>. r=zbraniecki
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 73

Please request beta uplift when you get a chance.

Flags: qe-verify+
Flags: needinfo?(gandalf)

oops, set the wrong flag...

Flags: qe-verify+ → in-testsuite+
Flags: needinfo?(gandalf) → needinfo?(stas)

Comment on attachment 9113422 [details]
Bug 1599864 - Ignore markup when localizing <title>. r?zbraniecki

Beta/Release Uplift Approval Request

  • User impact if declined: Broken window title (in the title bar, the taskbar, the task switcher etc.) when the current page's title includes the < character. Examples of affected websites:
  • documentation of HTML elements,
  • documentation of React components,
  • when < is used to indicate hierarchy,
  • when < is used for stylized punctuation.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The fix special-cases the HTML <title> element, without affecting any other elements.
  • String changes made/needed:
Flags: needinfo?(stas)
Attachment #9113422 - Flags: approval-mozilla-beta?
Assignee: gandalf → stas

Comment on attachment 9113422 [details]
Bug 1599864 - Ignore markup when localizing <title>. r?zbraniecki

i18n regression fix, approved for 72.0b5

Attachment #9113422 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: