Bug 1599864 - Ignore markup when localizing <title>. r=zbraniecki a=jcristau

Prevent the l10n overlays logic from parsing markup in Fluent translations when the element being localized is `<title>`. This fixes a regression from bug 1591328 which migrated the browser window title to Fluent, interpolating the current page's title into a Fluent message which is used to localize the window title. If the web page's title contained markup, l10n overlays would parse it—and then sanitize and strip it, which produced an incomplete result visible in the window's title bar and the task bar of the OS.

Differential Revision: https://phabricator.services.mozilla.com/D55784

--HG--
extra : source : c21f94d31eb5b95405d0f8850559af13af9b7ea5